[project]
name = "of-the-day-bot"
version = "1.0.0"
description = "A Discord bot for daily posts and match-ups"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.2",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "Pillow>=10.1.0",
]
